--- a/NVcadModerator/NVcadModerator.csproj
+++ b/NVcadModerator/NVcadModerator.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{937A9607-3387-4B56-8A95-63F7A7C9F802}</ProjectGuid>
+    <ProjectGuid>{B8DD241E-63EC-48C7-B076-F2C885498D07}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NVcad</RootNamespace>
-    <AssemblyName>NVcad</AssemblyName>
+    <RootNamespace>NVcadModerator</RootNamespace>
+    <AssemblyName>NVcadModerator</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -43,36 +43,14 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CadObjects\Arc.cs" />
-    <Compile Include="CadObjects\CadObject.cs" />
-    <Compile Include="CadObjects\CadViewPort.cs" />
-    <Compile Include="CadObjects\ConicSegment.cs" />
-    <Compile Include="CadObjects\Geometric.cs" />
-    <Compile Include="CadObjects\Graphic.cs" />
-    <Compile Include="CadObjects\LineSegment.cs" />
-    <Compile Include="CadObjects\Path.cs" />
-    <Compile Include="Foundations\Angle.cs" />
-    <Compile Include="Foundations\Angles\Azimuth.cs" />
-    <Compile Include="Foundations\Angles\Deflection.cs" />
-    <Compile Include="Foundations\Angles\Slope.cs" />
-    <Compile Include="Foundations\Coordinates\BoundingBox.cs" />
-    <Compile Include="Foundations\Coordinates\IBoundingBoxed.cs" />
-    <Compile Include="Foundations\Coordinates\Point.cs" />
-    <Compile Include="Foundations\Coordinates\Ray.cs" />
-    <Compile Include="Foundations\Coordinates\StationOffsetElevation.cs" />
-    <Compile Include="Foundations\Coordinates\Vector.cs" />
-    <Compile Include="Foundations\Degree.cs" />
-    <Compile Include="Foundations\Symbology\Color.cs" />
-    <Compile Include="Foundations\Symbology\Feature.cs" />
-    <Compile Include="Models\Model.cs" />
+    <Compile Include="Moderator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Foundations\Coordinates\CurviLinear\" />
-    <Folder Include="Views\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="CadObjects\CadObjectsDiagram.cd" />
+    <ProjectReference Include="..\NVcad\NVcad.csproj">
+      <Project>{937a9607-3387-4b56-8a95-63f7a7c9f802}</Project>
+      <Name>NVcad</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
