NVcad2dViewCanvas class: Added to NVcadView

--- a/NVcadView/NVcadView.csproj
+++ b/NVcadView/NVcadView.csproj
@@ -69,6 +69,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Compile Include="NVcad2dViewCanvas.cs" />
     <Compile Include="NVcad2dViewWindow.cs">
       <SubType>Code</SubType>
     </Compile>
