--- a/NVcad/NVcad.csproj
+++ b/NVcad/NVcad.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Foundations\Symbology\Color.cs" />
     <Compile Include="Foundations\Symbology\Feature.cs" />
     <Compile Include="ICadNotificationTarget.cs" />
+    <Compile Include="IcadView.cs" />
     <Compile Include="Models\Model.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
