--- a/NVcadView/NVcadView.csproj
+++ b/NVcadView/NVcadView.csproj
@@ -99,6 +99,12 @@
     </None>
     <AppDesigner Include="Properties\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NVcad\NVcad.csproj">
+      <Project>{937a9607-3387-4b56-8a95-63f7a7c9f802}</Project>
+      <Name>NVcad</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
