--- a/NVcad/NVcad.csproj
+++ b/NVcad/NVcad.csproj
@@ -51,6 +51,7 @@
     <Compile Include="CadObjects\Graphic.cs" />
     <Compile Include="CadObjects\LineSegment.cs" />
     <Compile Include="CadObjects\Path.cs" />
+    <Compile Include="CadObjects\Text.cs" />
     <Compile Include="Foundations\Angle.cs" />
     <Compile Include="Foundations\Angles\Azimuth.cs" />
     <Compile Include="Foundations\Angles\Deflection.cs" />
@@ -71,7 +72,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Foundations\Coordinates\CurviLinear\" />
-    <Folder Include="Views\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="CadObjects\CadObjectsDiagram.cd" />
